# clearcheck

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO
.github/workflows/: build.yml
src/: lib.rs  panicking.rs
src/assertions/: equal.rs  mod.rs
src/assertions/bool/: mod.rs
src/assertions/char/: mod.rs
src/assertions/collection/: bound.rs  contain.rs  duplicate.rs  empty.rs  equal.rs  increasing_decreasing.rs  membership.rs  min_max.rs  mod.rs  predicate.rs  size.rs  sort.rs
src/assertions/date/: mod.rs
src/assertions/file/: mod.rs
src/assertions/float/: mod.rs
src/assertions/int/: mod.rs
src/assertions/map/: contain.rs  membership.rs  mod.rs  size.rs
src/assertions/option/: mod.rs  predicate.rs
src/assertions/ordered/: mod.rs
src/assertions/result/: mod.rs  predicate.rs
src/assertions/string/: begin.rs  boundary.rs  case.rs  contain.rs  empty.rs  end.rs  equal.rs  length.rs  membership.rs  mod.rs  numeric.rs  regex.rs
src/collection/: mod.rs  panicking.rs
src/collection/matchers/: bound.rs  contain.rs  duplicate.rs  empty.rs  mod.rs  size.rs  sort.rs
src/matchers/: boundary.rs  case.rs  contains.rs  duplicate.rs  empty.rs  equal.rs  length.rs  mod.rs  range.rs
src/matchers/bool/: mod.rs
src/matchers/char/: equal.rs  mod.rs
src/matchers/collection/: bound.rs  contain.rs  duplicate.rs  empty.rs  equal.rs  increasing_decreasing.rs  length.rs  membership.rs  min_max.rs  mod.rs  predicate.rs  size.rs  sort.rs
src/matchers/compose/: mod.rs
src/matchers/date/: mod.rs
src/matchers/file/: mod.rs
src/matchers/float/: mod.rs
src/matchers/int/: mod.rs
src/matchers/map/: contain.rs  empty.rs  length.rs  membership.rs  mod.rs  size.rs
tests/: collection.rs  map.rs
(+18 files in other folders)
