[package]
name = "assert4rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.31", optional = true }
num = "0.4.1"
regex = "1.10.2"
walkdir = { version = "2.4.0", features = [], optional = true }

[dev-dependencies]
tempdir = "0.3.7"

[features]
date = ["dep:chrono"]
file = ["dep:walkdir"]