[package]
name = "clearcheck"
version = "0.0.1"
edition = "2021"
authors = ["Sarthak Makhija"]
description = """
Elegant and extensible assertions for rust.
"""
readme = "README.md"
repository = "https://github.com/SarthakMakhija/clearcheck"
license = "MIT OR Apache-2.0"
keywords = ["assert", "assertions", "elegant", "elegant-assertions"]
categories = ["development-tools", "development-tools::testing"]
include = ["src/", "LICENSE-*", "README.md", "tests/"]

[package.metadata.docs.rs]
all-features = true

[features]
date = ["dep:chrono"]
file = ["dep:walkdir"]
num = ["dep:num"]
regex = ["dep:regex"]

[dependencies]
chrono = { version = "0.4.31", optional = true }
num = { version = "0.4.1", optional = true }
regex = { version = "1.10.2", optional = true }
walkdir = { version = "2.4.0", features = [], optional = true }

[dev-dependencies]
tempdir = "0.3.7"
